Improve modularisation